WIP enemy return + background image test

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
         background-color: rgba(128, 128, 128, 0.5);
     }
 
+    #canvas-container{
+        background-image: url("proto-map.png");
+        background-repeat: no-repeat;
+ 
+    }
     </style>
   </head>
   <body>
