--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     }
 
     .grid__cell {
-        background-color: rgba(128, 128, 128, 0.25);
-        border: 1px solid black;
+        background-color: rgba(128, 128, 128, 0);
+        border: 1px solid rgba(0, 0, 0, 0.1);
         border-style: inset;
         box-sizing: border-box;
     }
 
     .grid__cell:hover {
-        background-color: rgba(128, 128, 128, 0.5);
+        background-color: rgba(209, 209, 209, 0.5);
     }
 
     #canvas-container{
