--- a/index.html
+++ b/index.html
@@ -47,7 +47,17 @@
     }
 
     .grid__cell:hover {
-        opacity : .5 !important
+        opacity : .5; 
+    }
+
+    .grid__cell.grid__cell--refuse {
+        opacity : 1;
+        background-color: red; 
+    }
+
+    .grid__cell.grid__cell--accept {
+        opacity : 1;
+        background-color: green; 
     }
 
     .canvas-container{
@@ -76,7 +86,7 @@
     .right-menu__item{
         width: 50px;
         height: 50px;
-        background-color: red;
+        background-color: blue;
         margin: 10px;
 
     }
