--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
     }
 
     .grid__cell.grid__cell--refuse {
-        opacity : 1;
+        opacity : .5;
         background-color: red; 
     }
 
     .grid__cell.grid__cell--accept {
-        opacity : 1;
+        opacity : .5;
         background-color: green; 
     }
 
