Change canvas rendering

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
         top: 0;
         left: 0;
         z-index: 1; /* Must be over background and under grid */
+        image-rendering: -moz-crisp-edges;    
+        image-rendering: -webkit-crisp-edges; 
+        image-rendering: pixelated;          
     }
 
     /* Background image */
