--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
     .right-menu__item {
         width: 50px;
         height: 50px;
-        background-color: blue;
         margin: 10px;
     }
 
@@ -158,7 +157,12 @@
 
     <!--Loaded images-->
     <div class="cache-images">
-        <img id="enemy" src="enemy.png" width="120" height="120">
+        <img id="enemy" src="assets/images/enemy.png" width="120" height="120">
+        <img id="tower-basic" src="assets/images/towers-sprite.png" width="500" height="250">
+        <img id="tower-sniper" src="assets/images/tower-sprite.png" width="500" height="250">
+        <img id="tower-basic-icon" src="assets/images/tower-basic-icon.png" width="50" height="50">
+        <img id="tower-rocket-icon" src="assets/images/tower-rocket-icon.png" width="50" height="50">
+        <img id="tower-sniper-icon" src="assets/images/tower-sniper-icon.png" width="50" height="50">
     </div>
 
     <script src="./bundle.js" charset="utf-8"></script>
