Implement value & building points

--- a/index.html
+++ b/index.html
@@ -154,6 +154,8 @@
     </div>
 
     <button id="stop">Stop</button>
+    <h1 id="value">VALEUR: 00000</h1>
+    <h1 id="buildingPoints">BUILDING POINTS : 00</h1>
 
     <!--Loaded images-->
     <div class="cache-images">
