Implement building cost

--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@
         width: 50px;
         height: 50px;
         margin: 10px;
+        user-select: none;
+    }
+
+    .right-menu__item--unavailable {
+        filter: blur(4px);
     }
 
     /* Load hidden images */
