Implements pause / resume / toggle

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
     </div>
 
-    <button id="stop">Stop</button>
+    <button id="stop">Pause</button>
     <h1 id="value">VALEUR: 00000</h1>
     <h1 id="buildingPoints">BUILDING POINTS : 00</h1>
 
