Implements increase / reset game speed

--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
     </div>
 
     <button id="stop">Pause</button>
+    <button id="increase-speed">Faster</button>
+    <button id="reset-speed">Reset speed</button>
     <h1 id="value">VALEUR: 00000</h1>
     <h1 id="buildingPoints">BUILDING POINTS : 00</h1>
 
