[WIP] Implements Seeker tower and Missile

--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
         <img id="tower-basic-icon" src="assets/images/tower-basic-icon.png" width="50" height="50">
         <img id="tower-rocket-icon" src="assets/images/tower-rocket-icon.png" width="50" height="50">
         <img id="tower-sniper-icon" src="assets/images/tower-sniper-icon.png" width="50" height="50">
+        <img id="tower-seeker-icon" src="assets/images/tower-seeker-icon.png" width="50" height="50">
     </div>
 
     <script src="./bundle.js" charset="utf-8"></script>
