Implements delete building

--- a/index.html
+++ b/index.html
@@ -163,7 +163,10 @@
         </div>  
 
         <div id="building-menu" class="building-menu right-menu"></div>
-        <div id="contextual-menu" class="contextual-menu right-menu right-menu--hidden"></div>
+        <div id="contextual-menu" class="contextual-menu right-menu right-menu--hidden">
+            <h3 id="contextual-menu-building-name"></h3>
+            <button id="contextual-menu-remove-btn">Suprimer</button>
+        </div>
 
     </div>
 
