Level handles explosions as instances of Explosion class
Also uses individual spritesheets for towers and a unique spritesheet for explosions

--- a/index.html
+++ b/index.html
@@ -174,13 +174,16 @@
 
     <!--Loaded images-->
     <div class="cache-images">
-        <img id="enemy" src="assets/images/enemy.png" width="120" height="120">
-        <img id="tower-basic" src="assets/images/towers-sprite.png" width="500" height="250">
-        <img id="tower-sniper" src="assets/images/tower-sprite.png" width="500" height="250">
-        <img id="tower-basic-icon" src="assets/images/tower-basic-icon.png" width="50" height="50">
-        <img id="tower-rocket-icon" src="assets/images/tower-rocket-icon.png" width="50" height="50">
-        <img id="tower-sniper-icon" src="assets/images/tower-sniper-icon.png" width="50" height="50">
-        <img id="tower-seeker-icon" src="assets/images/tower-seeker-icon.png" width="50" height="50">
+        <img id="sprite-enemy" src="assets/images/enemy.png">
+        <img id="sprite-tower-basic" src="assets/images/tower-basic.png">
+        <img id="sprite-tower-sniper" src="assets/images/tower-sniper.png">
+        <img id="sprite-tower-seeker" src="assets/images/tower-seeker.png">
+        <img id="sprite-explosions" src="assets/images/explosions.png">
+        <img id="sprite-tower-basic-icon" src="assets/images/tower-basic-icon.png">
+        <img id="sprite-tower-rocket-icon" src="assets/images/tower-rocket-icon.png">
+        <img id="sprite-tower-sniper-icon" src="assets/images/tower-sniper-icon.png">
+        <img id="sprite-tower-seeker-icon" src="assets/images/tower-seeker-icon.png">
+        <img id="missile-place-holder" src="assets/images/towers-sprite.png">
     </div>
 
     <script src="./bundle.js" charset="utf-8"></script>
