--- a/index.html
+++ b/index.html
@@ -178,11 +178,13 @@
         <img id="sprite-tower-basic" src="assets/images/tower-basic.png">
         <img id="sprite-tower-sniper" src="assets/images/tower-sniper.png">
         <img id="sprite-tower-seeker" src="assets/images/tower-seeker.png">
+        <img id="sprite-tower-tesla" src="assets/images/tower-tesla.png">
         <img id="sprite-explosions" src="assets/images/explosions.png">
         <img id="sprite-tower-basic-icon" src="assets/images/tower-basic-icon.png">
         <img id="sprite-tower-rocket-icon" src="assets/images/tower-rocket-icon.png">
         <img id="sprite-tower-sniper-icon" src="assets/images/tower-sniper-icon.png">
         <img id="sprite-tower-seeker-icon" src="assets/images/tower-seeker-icon.png">
+        <img id="sprite-tower-tesla-icon" src="assets/images/tower-tesla-icon.png">
         <img id="missile-place-holder" src="assets/images/towers-sprite.png">
     </div>
 
