--- a/index.html
+++ b/index.html
@@ -151,8 +151,9 @@
             <button id="increase-speed">Faster</button>
             <button id="decrease-speed">Slower</button>
             <button id="reset-speed">Reset speed</button>
-            <h4 id="value">VALEUR: 00000</h1>
-            <h4 id="buildingPoints">BUILDING POINTS : 00</h1>
+            <h4 id="value">VALEUR: 00000</h4>
+            <h4 id="buildingPoints">Points de construction : 0</h4>
+            <h4 id="socialPoints">Points sociaux : 0</h4>
          </div>
         <div class="wrapper" id="wrapper">
             <div class="scene" id="scene">
@@ -179,12 +180,14 @@
         <img id="sprite-tower-sniper" src="assets/images/tower-sniper.png">
         <img id="sprite-tower-seeker" src="assets/images/tower-seeker.png">
         <img id="sprite-tower-tesla" src="assets/images/tower-tesla.png">
+        <img id="sprite-tower-mortar" src="assets/images/tower-mortar.png">
         <img id="sprite-explosions" src="assets/images/explosions.png">
         <img id="sprite-tower-basic-icon" src="assets/images/tower-basic-icon.png">
         <img id="sprite-tower-rocket-icon" src="assets/images/tower-rocket-icon.png">
         <img id="sprite-tower-sniper-icon" src="assets/images/tower-sniper-icon.png">
         <img id="sprite-tower-seeker-icon" src="assets/images/tower-seeker-icon.png">
         <img id="sprite-tower-tesla-icon" src="assets/images/tower-tesla-icon.png">
+        <img id="sprite-tower-mortar-icon" src="assets/images/tower-mortar-icon.png">
         <img id="missile-place-holder" src="assets/images/towers-sprite.png">
     </div>
 
