#WIP Rocket perspective

--- a/index.html
+++ b/index.html
@@ -171,8 +171,6 @@
 
     </div>
 
-    
-
     <!--Loaded images-->
     <div class="cache-images">
         <img id="sprite-enemy" src="assets/images/enemy.png">
@@ -189,6 +187,7 @@
         <img id="sprite-tower-tesla-icon" src="assets/images/tower-tesla-icon.png">
         <img id="sprite-tower-mortar-icon" src="assets/images/tower-mortar-icon.png">
         <img id="missile-place-holder" src="assets/images/towers-sprite.png">
+        <img id="sprite-rocket" src="assets/images/rocket.png">
     </div>
 
     <script src="./bundle.js" charset="utf-8"></script>
