Enemy becomes a parent class

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
     <!--Loaded images-->
     <div class="cache-images">
-        <img id="sprite-enemy" src="assets/images/enemy.png">
+        <img id="sprite-ceo" src="assets/images/ceo.png">
         <img id="sprite-tower-basic" src="assets/images/tower-basic.png">
         <img id="sprite-tower-sniper" src="assets/images/tower-sniper.png">
         <img id="sprite-tower-seeker" src="assets/images/tower-seeker.png">
