--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
     <!--Loaded images-->
     <div class="cache-images">
         <img id="sprite-ceo" src="assets/images/ceo.png">
+        <img id="sprite-crs" src="assets/images/crs.png">
         <img id="sprite-tower-basic" src="assets/images/tower-basic.png">
         <img id="sprite-tower-sniper" src="assets/images/tower-sniper.png">
         <img id="sprite-tower-seeker" src="assets/images/tower-seeker.png">
