Handle boss wave

--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@
         display: none;
     }
 
+    .call-boss--hidden {
+        display: none;
+    }
+
     </style>
   </head>
   <body>
@@ -154,6 +158,7 @@
             <h4 id="value">VALEUR: 00000</h4>
             <h4 id="buildingPoints">Points de construction : 0</h4>
             <h4 id="socialPoints">Points sociaux : 0</h4>
+            <button id="call-boss" class="call-boss">Appeler le boss</button>
          </div>
         <div class="wrapper" id="wrapper">
             <div class="scene" id="scene">
