--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
             <h3 id="contextual-menu-building-name"></h3>
             <button id="contextual-menu-remove-btn">Suprimer</button>
         </div>
-
     </div>
+    <div id="techtree" class="tech-tree"></div>
 
     <!--Loaded images-->
     <div class="cache-images">
